# ChangeLog for app-forensics/zzuf
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> zzuf-0.10.ebuild:
  Added ~sparc keyword

  11 Nov 2007; Jukka Ruohonen <drear@iki.fi> -zzuf-0.9.ebuild,
  +zzuf-0.10.ebuild:
  Version bump; remove old.

  11 Nov 2007; Jukka Ruohonen <drear@iki.fi> zzuf-0.9.ebuild:
  Added ~amd64 keyword; compiles fine, runtime behavior verified.

  12 Aug 2007; Jakub Moc <jakub@gentoo.org> +metadata.xml, +zzuf-0.9.ebuild:
  New ebuild, Bug 188646
