@@ -1,4 +1,4 @@
 DIST zzuf-0.10.tar.gz 425897 RMD160 521369e990b1e79db71de688494b264995baa508 SHA1 92d0948e6b821945011f9707244db6d17a4d0ba0 SHA256 a5fa82e49c01721f0ae339345780c55d1ae9e42ed6909901a1c688800e5b834c
-EBUILD zzuf-0.10.ebuild 438 RMD160 d2ec232372e1663b041c31609f046a9bc9e02b21 SHA1 2cd34885a7e319716fc428c824b4e0939fb8b620 SHA256 a4bac47be9c1bf5c345326d7b8615157ad806d6dee57302ad453dbb20fd8d26d
-MISC ChangeLog 562 RMD160 0010ac87c9ed8ce158b1c25d6036d8acae74d784 SHA1 c2c80ff2bb15ec9d35d33cf2896b76e913cf7d3c SHA256 027c6891c047920742ae0d262c594706c3ea2f13a615417225bcbd5f3ed04564
+EBUILD zzuf-0.10.ebuild 542 RMD160 6a97fd70c7e05538a9ec37d15accd9423e2990b5 SHA1 4bbe000b453297d403ea14a8a71cb387cd22401d SHA256 00b398d5dfc77942baabfba25cc38043c350a69e850dfbd87bf7c42737a63b30
+MISC ChangeLog 714 RMD160 bd9948b7ce18a5d0e7fbb698278d928c0b00b8ab SHA1 4aaf5e9da1be9041bda0baedf3c7167592fc5ff5 SHA256 f9b5622d4aa104f72f614e179334bb6ea6b535330d4a3cdad7c2451cde404daa
 MISC metadata.xml 1129 RMD160 d78d7401c7d0b1490553ad5c7ed6f38b6683dae9 SHA1 8a972e3c08c5919af0c6d8329cae942d152e27a2 SHA256 fba864978069d049ac2378a91300c080c127da91ad3445f995bee5594426d3c6
